syntax = "proto3";

option go_package = "./pb";

service Auth {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse { string access_token = 1; }

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse { string access_token = 1; }

