syntax = "proto3";

option go_package = "./pb";

service Secrets {
  rpc SavePassword(SavePasswordRequest) returns (Empty);
  rpc GetPassword(GetSecretRequest) returns (PasswordResponse);

  rpc SaveCard(SaveCardRequest) returns (Empty);
  rpc GetCard(GetSecretRequest) returns (CardResponse);

  rpc SaveText(SaveTextRequest) returns (Empty);
  rpc GetText(GetSecretRequest) returns (TextResponse);
}

message Empty {}

message GetSecretRequest {
  string name = 1;
}

message SavePasswordRequest {
  string name = 1;
  string login = 2;
  string password = 3;
}

message PasswordResponse {
  string login = 1;
  string password = 2;
}

message SaveCardRequest {
  string cardName = 1;
  string number = 2;
  string holderName = 3;
  string date = 4;
  string ccv = 5;
}

message CardResponse {
  string number = 1;
  string holderName = 2;
  string date = 3;
  string ccv = 4;
}

message SaveTextRequest {
  string name=  1;
  string text = 2;
}

message TextResponse {
  string text = 1;
}


